# OLT_NEW

./: README.md  pyproject.toml  requirements.txt
OLT/: .env.exemple  README.md  docker-compose.yaml  manage.py  requirements.txt
OLT/OLT/: asgi.py  celery.py  settings.py  tasks.py  urls.py  wsgi.py
OLT/materials/: models.py  paginators.py  serializers.py  services.py  tests.py  urls.py  validators.py  views.py
OLT/materials/migrations/: 0001_initial.py  0002_lesson_user_alter_course_user.py  0003_subscription.py  0004_course_price.py  0005_lesson_price.py  0006_alter_course_price_alter_lesson_price.py  0007_course_stamp_update_lesson_stamp_update.py
OLT/users/: models.py  pay_services.py  permissions.py  serializers.py  urls.py  views.py
OLT/users/fixtures/: groups.json
OLT/users/management/commands/: add_groups.py  fill_test.py
OLT/users/migrations/: 0001_initial.py  0002_payments.py  0003_payments_payment_link_payments_session_id.py  0004_alter_payments_payment_link_and_more.py  0005_alter_payments_payment_link.py  0006_alter_payments_session_id.py  0007_alter_payments_session_id.py
